// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View Field Resolver - Failing Create Operation - v2 Should fail to create a conflicting view field on view and field metadata 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View field with same fieldmetadataId and viewId already exists",
              "userFriendlyMessage": "View field already exists",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataId": Any<String>,
            "id": Any<String>,
            "universalIdentifier": Any<String>,
            "viewId": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 viewField",
    "summary": {
      "totalErrors": 1,
      "viewField": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating view fields",
  "name": "GraphQLError",
}
`;

exports[`View Field Resolver - Failing Create Operation - v2 should fail to create view field when non-existent field metadata 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "Field metadata not found",
              "userFriendlyMessage": "Field metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataId": Any<String>,
            "id": Any<String>,
            "universalIdentifier": Any<String>,
            "viewId": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 viewField",
    "summary": {
      "totalErrors": 1,
      "viewField": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating view fields",
  "name": "GraphQLError",
}
`;

exports[`View Field Resolver - Failing Create Operation - v2 should fail to create view field when non-existent view metadata 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View not found",
              "userFriendlyMessage": "View not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataId": Any<String>,
            "id": Any<String>,
            "universalIdentifier": Any<String>,
            "viewId": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 viewField",
    "summary": {
      "totalErrors": 1,
      "viewField": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating view fields",
  "name": "GraphQLError",
}
`;
